# haskell

./: .gitignore  plan.md
datastructures/: heaps.hs  list.hs  queues.hs  ral.hs  tree.hs  tries.hs
depth/: CHANGELOG.md  depth.cabal
depth/ch1/: Main.hs
depth/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
depth/hello/: Main.hs
introduction/: FileUtility.hs  chapter10.hs  chapter12.hs  chapter13.hs  chapter14.hs  chapter15.hs  chapter2.hs  chapter3.hs  chapter4.hs  chapter5.hs  chapter6.hs  chapter7.hs  chapter8.hs  chapter9.hs
