cabal-version:      2.4
name:               depth
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             macbeth-byui
maintainer:         macbethc@byui.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable hello
    main-is: Main.hs
    ghc-options: -Wall -Werror -Wcompat -Widentities -Wincomplete-uni-patterns -Wincomplete-record-updates -Wno-unused-top-binds -Wno-orphans
    build-depends: base ^>=4.14.3.0
    hs-source-dirs: hello
    default-language: Haskell2010

executable vocab
    main-is: Main.hs
    ghc-options: -Wall -Werror -Wcompat -Widentities -Wincomplete-uni-patterns -Wincomplete-record-updates -Wno-unused-top-binds -Wno-orphans
    default-extensions: OverloadedStrings
    -- build-depends: base ^>=4.14.3.0, text ^>=1.2, fmt ^>=0.5
    build-depends: base >=4.12 && <4.15, fmt >=0.5 && <0.7, text >=1.2 && <1.3
    hs-source-dirs: ch1
    default-language: Haskell2010